RESOLVED FIXED204924
Fix inspector/css test assertions after r253158
https://bugs.webkit.org/show_bug.cgi?id=204924
Summary Fix inspector/css test assertions after r253158
Simon Fraser (smfr)
Reported 2019-12-05 15:14:19 PST
Fix inspector/css test assertions after r253158
Attachments
Patch (4.04 KB, patch)
2019-12-05 15:14 PST, Simon Fraser (smfr)
hi: review+
Simon Fraser (smfr)
Comment 1 2019-12-05 15:14:58 PST
EWS Watchlist
Comment 2 2019-12-05 15:16:08 PST
This patch modifies the inspector protocol. Please ensure that any frontend changes appropriately use feature checks for new protocol features.
Devin Rousso
Comment 3 2019-12-05 15:20:52 PST
Comment on attachment 384967 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=384967&action=review r=me, with one additional fix > Source/WebCore/ChangeLog:8 > + No new tests (OOPS!). Oops. > Source/WebInspectorUI/UserInterface/Controllers/CSSManager.js:754 > + Highlight: "highlight", In addition to this, I think the only thing that's necessary for the Web Inspector frontend to handle this is adding the following to `WI.CSSManager.displayNameForPseudoId`: ``` case CSSManager.PseudoSelectorNames.Highlight: return WI.unlocalizedString("::highlight"); ``` Without this, the Web Inspector frontend would log an error to the console. I'd rather fix both the backend `ASSERT` and any frontend requirements at the same time. It's not necessary to add it to the switch-case inside the `if (!InspectorBackend.Enum.CSS.PseudoId)` as that's only used for compatibility purposes when inspecting older webpages, meaning that path won't be taken when inspecting a page that has `PseudoId::Highlight` defined.
Simon Fraser (smfr)
Comment 4 2019-12-05 15:29:19 PST
Radar WebKit Bug Importer
Comment 5 2019-12-05 15:30:25 PST
Note You need to log in before you can comment on or make changes to this bug.