Fix inspector/css test assertions after r253158 https://bugs.webkit.org/show_bug.cgi?id=204924

Reviewed by Devin Rousso.
Source/JavaScriptCore:

Teach the inspector protocol about the ::highlight pseudoelement.

* inspector/protocol/CSS.json:

Source/WebCore:

* inspector/agents/InspectorCSSAgent.cpp:
(WebCore::protocolValueForPseudoId):

Source/WebInspectorUI:

* UserInterface/Controllers/CSSManager.js:
(WI.CSSManager.displayNameForPseudoId):

Canonical link: https://commits.webkit.org/218131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253176 268f45cc-cd09-0410-ab3c-d52691b4dbfc